k8sland/lab2/istio/istio/dictionary-80-20.yml
apiVersion: networking.istio.io/v1alpha3
kind:       VirtualService
metadata:
  name: CHANGE_ME!
spec:
  hosts:
  - CHANGE_ME!
  http:
  - match:
    - sourceLabels:
        CHANGE_ME!
    route:
    - destination:
        host:   CHANGE_ME!
        subset: CHANGE_ME!
      weight: CHANGE_ME!
    - destination:
        host:   CHANGE_ME!
        subset: CHANGE_ME!
      weight: CHANGE_ME!
