k8sland/lab2/istio/istio/mirror.yml
apiVersion: networking.istio.io/v1alpha3
kind:       VirtualService
metadata:
  name: CHANGE_ME!
spec:
  hosts:
    - CHANGE_ME!
  http:
  - route:
    - destination:
        host:   CHANGE_ME!
        subset: CHANGE_ME!
      weight: CHANGE_ME!
    mirror:
      host:   CHANGE_ME!
      subset: CHANGE_ME!
