k8sland/lab2/istio/istio/routes.yml
apiVersion: networking.istio.io/v1alpha3
kind:       VirtualService
metadata:
  name: routes
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: CHANGE_ME!
        port:
          number: CHANGE_ME!
